--- a/universalSCSS/02-layout/_base.scss
+++ b/universalSCSS/02-layout/_base.scss
@@ -10,7 +10,6 @@ body {
 }
 
 html {
-  font-size: 1.05rem;
   width: 100%;
 }
 
@@ -18,7 +17,8 @@ body {
   color: var(--darkGrey2);
   display: grid;
   font-family: var(--Roboto);
-  font-size: 16px;
+  font-size: 1.05rem;
+  //font-size: 16px;
   font-weight: 400;
   grid-template-areas:
     'header'
@@ -214,20 +214,11 @@ footer {
 
 /* Media query for center section under 794px wide */
 @media all and (max-width: 794px) {
+
   // the main section between the nav top bar and the footer
   .main-section,
   .main-section--left-wide,
   .main-section--right-wide {
-    display: grid;
-    grid-template-areas:
-      'sidebar'
-      'pContent';
-    grid-template-columns: 1fr;
-    grid-template-rows: repeat(3, 1fr);
-    max-height: 100vh;
-
-    //grid-template-columns: 1fr;
-    //grid-template-rows: 1fr 1fr;
 
     .sidebar {
       grid-area: sidebar;
@@ -248,6 +239,16 @@ footer {
     // the main sections of each side of the site
     .primaryContent {
       grid-area: pContent;
+      margin: 0 1rem;
     }
   }
+
+ .main-section {
+    grid-template-areas:
+      'sidebar'
+      'pContent';
+
+  grid-template-columns: 1fr;
+  }
+
 }
